# gsheet_api

./: Cargo.toml  README.md
src/: auth.rs  client.rs  error.rs  lib.rs  models.rs  operations.rs  utils.rs
src/auth/: error.rs  service_account.rs  token.rs
src/client/: gsheet_client.rs
src/models/: cell.rs  charts.rs  common.rs  conditions.rs  data_source.rs  filters.rs  formatting.rs  grid.rs  range.rs  sheet.rs  spreadsheet.rs  value.rs
src/operations/: sheet.rs  spreadsheet.rs
