[package]
name = "gsheet_api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
async-trait = "0.1.89"
base64 = "0.22.1"
chrono = { version = "0.4.41", features = ["serde"] }
jsonwebtoken = "9.3.1"
regex = "1.11.2"
reqwest = { version = "0.12.23", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.143"
strum = "0.27.2"
strum_macros = "0.27.2"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
